--- a/templates/index.html
+++ b/templates/index.html
@@ -12,10 +12,10 @@
       <a
         href="https://www.gssi.it/people/students/students-physics/item/24616-vaiman-igor"
         >at GSSI</a
-      >, software development, music and other things.
+      >, software dev on the web and around it, music, and other things.
     </p>
     <p>this site is a place for me to document some of the stuff I do.</p>
-    <h3>where to find and/or contact me</h3>
+    <h3>where to find / contact me</h3>
     <ul>
       <li>
         <a href="https://github.com/nj-vs-vh">github</a>
@@ -26,10 +26,14 @@
         >
       </li>
       <li>
+        <a href="https://soundcloud.com/igor_vaiman">soundcloud</a>
+      </li>
+      <li>
         <a href="mailto:gosha.vaiman@gmail.com">e-main</a>
         <code>gosha.vaiman@gmail.com</code>
       </li>
     </ul>
+    <h3>my projects: {{ number }}</h3>
   </body>
   <style>
     body {
