--- a/templates/project.html
+++ b/templates/project.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-<h1>{{ title }}</h1>
-<div>
-    {{ body_html|escape("none") }}
-</div>
-</body>
+  </head>
+  <body>
+    <header>
+      <a href="/">back</a>
+    </header>
+    <h1>{{ title }}</h1>
+    <div>{{ body_html|escape("none") }}</div>
+  </body>
 </html>
