global styles + minor improvements

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>nj-vs-vh page</title>
+    <link rel="stylesheet" href="/static/style.css">
   </head>
   <body>
     <h1>hi, I'm Igor</h1>
@@ -40,16 +41,4 @@
       {% endfor %}
     </ul>
   </body>
-  <style>
-    body {
-      margin: 3em;
-    }
-    h3 {
-      margin: 0.5em 0;
-    }
-    ul {
-      margin: auto 0.5em;
-      padding-left: 0.5em;
-    }
-  </style>
 </html>
