--- a/templates/project.html
+++ b/templates/project.html
@@ -3,11 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>nj-vs-vh | {{ title }}</title>
+    <link rel="stylesheet" href="/static/style.css">
   </head>
   <body>
     <header>
-      <a href="/">back</a>
+      <a href="/"><-</a>
     </header>
     <h1>{{ title }}</h1>
     <div>{{ body_html|escape("none") }}</div>
