this website description

--- a/templates/index.html
+++ b/templates/index.html
@@ -30,7 +30,7 @@
         <a href="https://soundcloud.com/igor_vaiman">soundcloud</a>
       </li>
       <li>
-        <a href="mailto:gosha.vaiman@gmail.com">e-main</a>
+        <a href="mailto:gosha.vaiman@gmail.com">e-main</a> to
         <code>gosha.vaiman@gmail.com</code>
       </li>
     </ul>
