many small fixes

--- a/templates/index.html
+++ b/templates/index.html
@@ -34,8 +34,7 @@
         >
       </li>
       <li>
-        <a href="mailto:gosha.vaiman@gmail.com" target="_blank">e-main</a> to
-        <code>gosha.vaiman@gmail.com</code>
+        <a href="mailto:gosha.vaiman@gmail.com" target="_blank">e-main</a> to gosha.vaiman@gmail.com
       </li>
     </ul>
     <h3>my projects in random order</h3>
@@ -46,5 +45,6 @@
       </li>
       {% endfor %}
     </ul>
+    {% include "license_footer.html" %}
   </body>
 </html>
