--- a/static/style.css
+++ b/static/style.css
@@ -1,5 +1,6 @@
 body {
-  margin: 2rem;
+  margin: 2rem auto;
+  width: min(800px, 95vw);
   font-family: 'Courier New', Courier, monospace;
 }
 
@@ -23,5 +24,5 @@ a:hover {
 }
 
 img {
-  max-width: 90vh;
+  max-width: 100%;
 }
