--- a/templates/project.html
+++ b/templates/project.html
@@ -14,19 +14,20 @@
     {% if related_links.len() > 0 %}
     <div
       style="
+        margin: 1.5rem auto;
         display: flex;
         flex-direction: row;
         gap: 1rem;
         align-items: baseline;
       "
     >
+      <span>Links:</span>
       {% for link in related_links %}
-      <a style="padding: 0.3rem" href="{{link.url}}" target="_blank"
-        >{{ link.name }}</a
-      >
+      <a href="{{link.url}}" target="_blank">{{ link.name }}</a>
       {% endfor %}
     </div>
     {% endif %}
     <div>{{ body_html|escape("none") }}</div>
+    {% include "license_footer.html" %}
   </body>
 </html>
