favicon and other sstuff

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>nj-vs-vh page</title>
     <link rel="stylesheet" href="/static/style.css" />
+    <link rel="icon" href="/static/favicon.ico"/>
   </head>
   <body>
     <h1>hi, I'm Igor</h1>
