--- a/templates/project.html
+++ b/templates/project.html
@@ -22,7 +22,7 @@
         align-items: baseline;
       "
     >
-      <span>Links:</span>
+      <strong>links:</strong>
       {% for link in related_links %}
       <a href="{{link.url}}" target="_blank">{{ link.name }}</a>
       {% endfor %}
