--- a/templates/index.html
+++ b/templates/index.html
@@ -8,15 +8,15 @@
     <link rel="icon" href="/static/favicon.ico"/>
   </head>
   <body>
-    <h1>hi, I'm Igor</h1>
+    <h1>hi, i'm Igor</h1>
     <p>
-      I do astroparticle physics
+      i do astroparticle physics
       <a
         href="https://www.gssi.it/people/students/students-physics/item/24616-vaiman-igor"
         >at GSSI</a
       >, software engineering on the web and around, music, and other things.
     </p>
-    <p>this site is a place for me to document some of the stuff I do.</p>
+    <p>this site is a place for me to document some of the stuff i do.</p>
     <h3>how to find me</h3>
     <ul>
       <li>
@@ -39,6 +39,7 @@
       </li>
     </ul>
     <h3>my projects in random order</h3>
+    <p><em>unfinished, i'm adding my backlog now</em></p>
     <ul>
       {% for project_href in project_hrefs %}
       <li>
