--- a/templates/index.html
+++ b/templates/index.html
@@ -39,7 +39,7 @@
       </li>
     </ul>
     <h3>my projects in random order</h3>
-    <p><em>unfinished, i'm adding my backlog now</em></p>
+    <p><em>unfinished</em></p>
     <ul>
       {% for project_href in project_hrefs %}
       <li>
