--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Igor Vaiman's personal website, portfolio, project collection and playground">
     <title>nj-vs-vh page</title>
     <link rel="stylesheet" href="/static/style.css" />
     <link rel="icon" href="/static/favicon.ico"/>
