mathjax support added

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,16 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Igor Vaiman's personal website, portfolio, project collection and playground">
+    <meta
+      name="description"
+      content="Igor Vaiman's personal website, portfolio, project collection and playground"
+    />
     <title>nj-vs-vh page</title>
     <link rel="stylesheet" href="/static/style.css" />
-    <link rel="icon" href="/static/favicon.ico"/>
+    <link rel="icon" href="/static/favicon.ico" />
   </head>
   <body>
     <h1>hi, i'm Igor</h1>
     <p>
       i do astroparticle physics
       <a
+        target="_blank"
         href="https://www.gssi.it/people/students/students-physics/item/24616-vaiman-igor"
         >at GSSI</a
       >, software engineering on the web and around, music, and other things.
@@ -36,7 +40,8 @@
         >
       </li>
       <li>
-        <a href="mailto:gosha.vaiman@gmail.com" target="_blank">e-main</a> to gosha.vaiman@gmail.com
+        <a href="mailto:gosha.vaiman@gmail.com" target="_blank">e-main</a> to
+        gosha.vaiman@gmail.com
       </li>
     </ul>
     <h3>my projects in random order</h3>
