replace back with home

--- a/templates/project.html
+++ b/templates/project.html
@@ -30,7 +30,7 @@
   {% endif %}
   <body>
     <header>
-      <a href="/"><-</a>
+      <a href="/">home</a>
     </header>
     <h1 style="margin-bottom: 0.3em">{{ project.metadata.title }}</h1>
     <div class="stack">
