--- a/templates/index.html
+++ b/templates/index.html
@@ -52,7 +52,7 @@
       </li>
       {% endfor %}
       <li class="see-more">
-        <a href="projects">...full list →</a>
+        <a href="projects">...see full list</a>
       </li>
     </ul>
     {% include "license_footer.html" %}
