--- a/templates/project_list.html
+++ b/templates/project_list.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header>
-      <a href="/">home</a>
+      <a href="/">home</a> /
     </header>
     <h1>projects</h1>
     <!-- <h1 style="margin-bottom: 0.3em">projects</h1> -->
