--- a/templates/project_list.html
+++ b/templates/project_list.html
@@ -15,7 +15,7 @@
       like to keep a catalog of stuff i did for reference and perhaps to show
       off a bit.
     </p>
-    <p>order is newest -> oldest</p>
+    <p>newest -> oldest</p>
     <ul>
       {% for project_href in project_hrefs %}
       <li>
