music page added

--- a/templates/index.html
+++ b/templates/index.html
@@ -14,15 +14,11 @@
   <body>
     <h1>hi, i'm Igor</h1>
     <p>
-      i do astroparticle physics
-      <a
-        target="_blank"
-        href="https://www.gssi.it/people/students/students-physics/item/24616-vaiman-igor"
-        >at GSSI</a
-      >, software engineering on the web and around, music, and other things.
+      i do astroparticle physics, software on the web and around, <a href="/music">music</a>, and
+      other things.
     </p>
     <p>this site is a place for me to document some of the stuff i do.</p>
-    <h3>how to find me</h3>
+    <h3>find me</h3>
     <ul>
       <li>
         i track code on
@@ -44,8 +40,9 @@
       </li>
       <li>
         write me an
-        <a href="mailto:gosha.vaiman@gmail.com" target="_blank">emain to
-        gosha.vaiman@gmail.com</a>
+        <a href="mailto:gosha.vaiman@gmail.com" target="_blank"
+          >emain to gosha.vaiman@gmail.com</a
+        >
       </li>
     </ul>
     <h3>my projects</h3>
