--- a/templates/music.html
+++ b/templates/music.html
@@ -113,10 +113,10 @@
         </div>
       </h2>
       <p>
-        a personal creative outlet and a platform for experimentation in genres
-        from screamo to field recording. i often have trouble sharing this
-        project this with people because of how intimate and consequently cringe
-        it gets at times.
+        a personal creative outlet, a noisy reflection machine, a platform for
+        experimentation in genres from screamo to field recording. i often have
+        trouble sharing this project this with people because of how intimate
+        and consequently cringy it gets at times.
       </p>
       <iframe
         style="border: 0; width: 100%; height: 42px"
@@ -132,6 +132,23 @@
         seamless
         ><a href="https://pinestobuildships.bandcamp.com/album/--4"
           >страх никогда не вернуться домой by корабельные сосны</a
+        ></iframe
+      >
+      <iframe
+        style="border: 0; width: 100%; height: 42px"
+        src="https://bandcamp.com/EmbeddedPlayer/album=2211872663/size=small/bgcol=ffffff/linkcol=0687f5/transparent=true/"
+        seamless
+        ><a href="https://pinestobuildships.bandcamp.com/album/--2"
+          >Это вы by корабельные сосны</a
+        ></iframe
+      >
+      <p>noise experiments etc</p>
+      <iframe
+        style="border: 0; width: 100%; height: 42px"
+        src="https://bandcamp.com/EmbeddedPlayer/album=3176640482/size=small/bgcol=ffffff/linkcol=0687f5/transparent=true/"
+        seamless
+        ><a href="https://pinestobuildships.bandcamp.com/album/--5"
+          >страх никогда не выйти из дома by корабельные сосны</a
         ></iframe
       >
     </section>
@@ -202,6 +219,45 @@
           ></iframe>
         </div>
       </details>
+    </section>
+    <section>
+      <h2>
+        пыль высоко
+        <div role="doc-subtitle">2015 - 2016 / drums, vocals</div>
+      </h2>
+      <p>
+        a short-lived emo / shoegaze band where i attempted to play drums and
+        sing at the same time with dubious success. the only release is
+        <a href="https://drive.google.com/file/d/0B7jwLAFZ9nPHcl9CbWptd1VyakU/"
+          >here</a
+        >.
+        <details>
+          <summary>live videos</summary>
+          <div>
+            <iframe
+              width="560"
+              height="315"
+              src="https://www.youtube.com/embed/Sw6zcbRO2lA?si=5o5SJQDcuyjjg37H"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              referrerpolicy="strict-origin-when-cross-origin"
+              allowfullscreen
+            ></iframe>
+            <p>(draw me like one of your 90s screamo bands)</p>
+            <iframe
+              width="560"
+              height="315"
+              src="https://www.youtube.com/embed/ZwqXwsdWLc8?si=VWSEjybsvaQU8gtp"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              referrerpolicy="strict-origin-when-cross-origin"
+              allowfullscreen
+            ></iframe>
+          </div>
+        </details>
+      </p>
     </section>
     <!-- <section>
       <h2>
