--- a/templates/music.html
+++ b/templates/music.html
@@ -151,6 +151,33 @@
           >страх никогда не выйти из дома by корабельные сосны</a
         ></iframe
       >
+      <p>
+        for a brief moment around 2018-2019 i tried playing live shows, which
+        are best summarized by this live
+      </p>
+      <iframe
+        width="560"
+        height="315"
+        src="https://www.youtube.com/embed/TdGRRwJhhxM?si=XLJifrci87djKfLR"
+        title="YouTube video player"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        referrerpolicy="strict-origin-when-cross-origin"
+        allowfullscreen
+      ></iframe>
+      <details>
+        <summary>and some more</summary>
+        <iframe
+          width="560"
+          height="315"
+          src="https://www.youtube.com/embed/P2ekiRhqpv0?si=hauX5KTYYgMssqYo"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          referrerpolicy="strict-origin-when-cross-origin"
+          allowfullscreen
+        ></iframe>
+      </details>
     </section>
     <section>
       <h2>
@@ -259,6 +286,43 @@
         </details>
       </p>
     </section>
+
+    <section>
+      <h2>DJ PULSAR</h2>
+      <details>
+        <summary>occasionally i DJ and here are some of my playlists</summary>
+        <iframe
+          style="border-radius: 12px"
+          src="https://open.spotify.com/embed/playlist/3vh6pS77vxf6wf8KhyrE2q?utm_source=generator&theme=0"
+          width="100%"
+          height="152"
+          frameborder="0"
+          allowfullscreen=""
+          allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+          loading="lazy"
+        ></iframe>
+        <iframe
+          style="border-radius: 12px"
+          src="https://open.spotify.com/embed/playlist/5m9wTCIrkDK8Xj1zZqxb29?utm_source=generator&theme=0"
+          width="100%"
+          height="152"
+          frameborder="0"
+          allowfullscreen=""
+          allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+          loading="lazy"
+        ></iframe>
+        <iframe
+          style="border-radius: 12px"
+          src="https://open.spotify.com/embed/playlist/5XWdOxdHuQYYokVsf7DylL?utm_source=generator&theme=0"
+          width="100%"
+          height="152"
+          frameborder="0"
+          allowfullscreen=""
+          allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+          loading="lazy"
+        ></iframe>
+      </details>
+    </section>
     <!-- <section>
       <h2>
         Name
@@ -269,6 +333,103 @@
       </h2>
       <p>description</p>
     </section> -->
+    <section>
+      <h2>misc</h2>
+      <ul>
+        <li>
+          soundtrack and sound design for several small game jam projects (<a
+            href="https://gasgiant.itch.io/piece"
+            >one</a
+          >, <a href="https://gasgiant.itch.io/negation">two</a>,
+          <a href="https://gasgiant.itch.io/backup-shooter">three</a>,
+          <a href="https://gasgiant.itch.io/do-evilsh">four</a>), audio versions
+          are on
+          <a href="https://soundcloud.com/nj_vs_valhalla">soundcloud</a>
+        </li>
+        <li>
+          <details>
+            <summary>
+              ambient-ish outro track for an album by a emoviolence band
+              Jautājums
+            </summary>
+            <iframe
+              width="100%"
+              height="166"
+              scrolling="no"
+              frameborder="no"
+              allow="autoplay"
+              src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/669416966&color=%23525252&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"
+            ></iframe>
+            <div
+              style="
+                font-size: 10px;
+                color: #cccccc;
+                line-break: anywhere;
+                word-break: normal;
+                overflow: hidden;
+                white-space: nowrap;
+                text-overflow: ellipsis;
+                font-family: Interstate, Lucida Grande, Lucida Sans Unicode,
+                  Lucida Sans, Garuda, Verdana, Tahoma, sans-serif;
+                font-weight: 100;
+              "
+            >
+              <a
+                href="https://soundcloud.com/nj_vs_valhalla"
+                title="Igor Vaiman"
+                target="_blank"
+                style="color: #cccccc; text-decoration: none"
+                >Igor Vaiman</a
+              >
+              ·
+              <a
+                href="https://soundcloud.com/nj_vs_valhalla/piano_outro"
+                title="piano_outro"
+                target="_blank"
+                style="color: #cccccc; text-decoration: none"
+                >piano_outro</a
+              >
+            </div>
+          </details>
+        </li>
+
+        <li>
+          recording, mixing and mastering for noise sludge metal band "Уберлицо"
+          <iframe
+            style="border: 0; width: 100%; height: 42px"
+            src="https://bandcamp.com/EmbeddedPlayer/album=1502447142/size=small/bgcol=ffffff/linkcol=0687f5/transparent=true/"
+            seamless
+            ><a href="https://masqeron.bandcamp.com/album/-"
+              >Сибирское Евангелие by Уберлицо</a
+            ></iframe
+          >
+        </li>
+        <li>
+          drums recording for industrial noise rock "Союз Озверелых"
+          <iframe
+            style="border: 0; width: 100%; height: 42px"
+            src="https://bandcamp.com/EmbeddedPlayer/album=3518751531/size=small/bgcol=ffffff/linkcol=0687f5/transparent=true/"
+            seamless
+            ><a href="https://soyuz0zverelih.bandcamp.com/album/-"
+              >Грохот немоты by Союз Озверелых</a
+            ></iframe
+          >
+        </li>
+        <li>
+          <details>
+            <summary>drums at Moé for some time</summary>
+            <iframe
+              src="https://vk.com/video_ext.php?oid=-150590882&id=456239017&hd=1"
+              width="640"
+              height="360"
+              allow="autoplay; encrypted-media; fullscreen; picture-in-picture; screen-wake-lock;"
+              frameborder="0"
+              allowfullscreen
+            ></iframe>
+          </details>
+        </li>
+      </ul>
+    </section>
     {% include "license_footer.html" %}
   </body>
 </html>
